Add several files...

--- a/markdown/期末复习.md
+++ b/markdown/期末复习.md
@@ -6,3 +6,30 @@
 - 时序电路与逻辑电路的区别
   - 组合逻辑电路在逻辑功能上的特点是任意时刻的输出仅仅取决于该时刻的输入，与电路原来的状态无关
   - 时序逻辑电路在逻辑功能上的特点是任意时刻的输出不仅取决于当时的输入信号，而且还取决于电路原来的状态，或者说，还与以前的输入有关。
+
+- Mealy/Moore型状态机的框图 期末复习2ppt87
+- 符号化状态机
+  - 所谓符号化状态机，就是在程序的说明部分使用TYPE语句定义枚举类型，其元素用状态机的状态名来定义。状态变量（如状态机的现态和次态）定义为变量或信号，并将状态变量的数据类型定义为含有既定状态元素的枚举类型。
+- 指定状态编码的格式课本p103
+  ```VHDL
+  ARRTIBUTE ENUM_ENCODING: STRING;
+  ARRTIBUTE ENUM_ENCODING OF state_type: TYPE IS "000 001 ..."
+  ```
+- 状态机输出同步问题
+  - 从形式上看，在输出端不使用同步方法时，只存储了pr_state；而使用同步方法时，同时存储了output。
+  - 对于Mealy型状态机，可以使用输出同步方式，来设计同步时序电路。
+  - 对于Moore型状态机，则不需要使用输出端同步的描述方式就可以得到同步输出的效果，这也是Moore型状态机的优点之一。
+
+- 数字系统设计的四个层次
+    1. 性能级
+    2. 功能级
+    3. 结构级
+    4. 物理级
+  - 系统设计：将性能级的说明映射为功能级的设计过程
+  - 逻辑设计：将功能级的描述转换为结构（逻辑）的过程
+  - 物理设计：将逻辑结构转换为物理级（电路）的实现
+
+- 数字系统划分为两个部分：数据处理器、控制器
+
+- CPLD：基于乘积项技术
+- FPGA：基于查找表（LUT）技术
