--- a/markdown/第五章 同步时序电路设计.md
+++ b/markdown/第五章 同步时序电路设计.md
@@ -11,9 +11,9 @@
 $$T>t_{c-q}+t_{hold}+t_{su}$$
 
 ## 5.2 State Machine  
-- A mathematic model for computer programs or sequential logic description.
-- A sequential logic event can be considered as an abstract machine with a finite number of states. The machine is in one state only at a given time.
-- Change from one state to another can be initiated by a triggering event or condition (state transition)s
+- ~~A mathematic model for computer programs or sequential logic description.~~
+- ~~A sequential logic event can be considered as an abstract machine with a finite number of states. The machine is in one state only at a given time.~~
+- ~~Change from one state to another can be initiated by a triggering event or condition (state transition)s~~
 
 ### 5.2.1 Race and Hazard  
 - Race and Hazard: a type of flaw in electronic system. A device may received signals with different delay due to different paths which may causes transient error in output.
@@ -54,7 +54,6 @@ $$T>t_{c-q}+t_{hold}+t_{su}$$
 - One state  is more than a state box.
 - Conditional output box, or decision box can also be a part of the state.
 - Each state represents a system state during one clock cycle, indicating the operations to be done in the  state.
-r4
 
 ### **5.2.3 Classification of FSM**
 #### In terms of Signal Outputting
